crates/ars-components/src/input/text_field/snapshots/ars_components__input__text_field__tests__text_field_clear_trigger_default.snap
---
source: crates/ars-components/src/input/text_field/mod.rs
expression: "snapshot_attrs(&service(props()).connect(&|_| {}).clear_trigger_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "clear-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "text-field",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Clear",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
