crates/ars-components/src/input/text_field/snapshots/ars_components__input__text_field__tests__text_field_clear_trigger_disabled.snap
---
source: crates/ars-components/src/input/text_field/mod.rs
expression: "snapshot_attrs(&service(props().disabled(true)).connect(&|_|\n{}).clear_trigger_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "clear-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "text-field",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Clear",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
        (
            Disabled,
            Bool(
                true,
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
