crates/ars-components/src/input/text_field/snapshots/ars_components__input__text_field__tests__text_field_description.snap
---
source: crates/ars-components/src/input/text_field/mod.rs
expression: "snapshot_attrs(&service(props()).connect(&|_| {}).description_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "description",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "text-field",
            ),
        ),
        (
            Id,
            String(
                "name-field-description",
            ),
        ),
    ],
    styles: [],
}
