crates/ars-components/src/input/text_field/snapshots/ars_components__input__text_field__tests__text_field_input_described_invalid.snap
---
source: crates/ars-components/src/input/text_field/mod.rs
expression: "snapshot_attrs(&described.connect(&|_| {}).input_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "text-field",
            ),
        ),
        (
            Aria(
                ErrorMessage,
            ),
            String(
                "name-field-error-message",
            ),
        ),
        (
            Aria(
                Invalid,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "name-field-label",
            ),
        ),
        (
            Aria(
                DescribedBy,
            ),
            String(
                "name-field-description name-field-error-message",
            ),
        ),
        (
            Dir,
            String(
                "ltr",
            ),
        ),
        (
            Id,
            String(
                "name-field-input",
            ),
        ),
        (
            Type,
            String(
                "text",
            ),
        ),
        (
            Value,
            String(
                "",
            ),
        ),
    ],
    styles: [],
}
