crates/ars-components/src/input/text_field/snapshots/ars_components__input__text_field__tests__text_field_input_form_constraints.snap
---
source: crates/ars-components/src/input/text_field/mod.rs
expression: "snapshot_attrs(&service(props().value(\"Alice\").placeholder(\"Full name\").max_length(50).min_length(2).pattern(\"[A-Za-z ]+\").autocomplete(\"name\").name(\"full_name\").form(\"profile\").required(true)).connect(&|_|\n{}).input_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "text-field",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "name-field-label",
            ),
        ),
        (
            Dir,
            String(
                "ltr",
            ),
        ),
        (
            Id,
            String(
                "name-field-input",
            ),
        ),
        (
            AutoComplete,
            String(
                "name",
            ),
        ),
        (
            Form,
            String(
                "profile",
            ),
        ),
        (
            MaxLength,
            String(
                "50",
            ),
        ),
        (
            MinLength,
            String(
                "2",
            ),
        ),
        (
            Name,
            String(
                "full_name",
            ),
        ),
        (
            Pattern,
            String(
                "[A-Za-z ]+",
            ),
        ),
        (
            Placeholder,
            String(
                "Full name",
            ),
        ),
        (
            Required,
            Bool(
                true,
            ),
        ),
        (
            Type,
            String(
                "text",
            ),
        ),
        (
            Value,
            String(
                "Alice",
            ),
        ),
    ],
    styles: [],
}
